--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-node_modules
-dist
-
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-lerna-debug.log
-
-.vscode
+**/node_modules
+**/lib
+**/*.log
+**/coverage
