--- a/packages/point/package.json
+++ b/packages/point/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.1",
   "description": "2D Point",
   "license": "MIT",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts"
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts"
 }
