--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,7 @@
 // tsconfig global project options - build or dev
 {
   "compilerOptions": {
-    "lib": ["es6"],
+    "lib": ["es5", "es6", "dom"],
     "noUnusedLocals": true
   }
 }
